@@ -1,3 +1,10 @@
+2016-10-15  Per Bothner  <per@bothner.com>
+
+	* PrimVector.template: Fix incorrect edits in generated files by making here instead.
+	(FVector.makConstant, FVector.replaceAll, ByteVector.writeTo): New methods.
+	* ByteVector.java: Re-generated.
+	* FVector.java: Re-generated.
+
 2016-10-11  Per Bothner  <per@bothner.com>
 
 	* PrintConsumer.java (writeBreak): Make public.
